--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- list item -->
         <div class="list">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="img1.jpg">
                 <div class="content">
                     <div class="author">RAJ</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -34,7 +34,7 @@
                </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="img2.jpg">
                 <div class="content">
                     <div class="author">RAJ</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="img3.jpg">
                 <div class="content">
                     <div class="author">RAJ</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="img4.jpg">
                 <div class="content">
                     <div class="author">RAJ</div>
                     <div class="title">DESIGN SLIDER</div>
@@ -82,7 +82,7 @@
         <!-- list thumnail -->
         <div class="thumbnail">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="img1.jpg">
                 <div class="content">
                     <div class="title">
                         Moose
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="img2.jpg">
                 <div class="content">
                     <div class="title">
                         Moose
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="img3.jpg">
                 <div class="content">
                     <div class="title">
                         Elephant
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="img4.jpg">
                 <div class="content">
                     <div class="title">
                         Leopard
